--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -1,10 +1,14 @@
 version:  "2"
 services:
     proxy:
-        image: httpd        
+        image: httpd
+        depends_on:
+          - web
     web:
         image: php
         ports:
           - "8080:80"
+        depends_on:
+          - mysql
     mysql:
         image: mysql
