Corrige o PHP para o WEB

--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -5,10 +5,14 @@ services:
         depends_on:
           - web
     web:
-        image: php
+        image: php:7.2-apache
         ports:
           - "8080:80"
         depends_on:
           - mysql
     mysql:
         image: mysql
+        command: --default-authentication-plugin=mysql_native_password
+        restart: always
+        environment:
+          MYSQL_ROOT_PASSWORD: example
